# ttlindkvistACTS

./: CMakeLists.txt  README.md
Run/: AMVFvsIterativeVertexFinder.cpp  CMakeLists.txt  ntupleReader.cpp
Testing/: AMVFvsIVFOutput.txt  AMVFvsIVF_test.bash  ntupleReaderOutput.txt  ntuple_reader_test.bash  resolution_check.ipynb  timing.tsv  vertexing_visualizer.ipynb  vertexing_visualizer_goodRecoVtxTracks.ipynb
Testing/AMVFvsIVF/: event0_AMVF.txt  event0_IVF.txt  event0_pythia8_cov.txt  event1_AMVF.txt  event1_IVF.txt  event1_pythia8_cov.txt  event2_AMVF.txt  event2_IVF.txt  event2_pythia8_cov.txt  event3_AMVF.txt  event3_IVF.txt  event3_pythia8_cov.txt  event4_AMVF.txt  event4_IVF.txt  event4_pythia8_cov.txt  event5_AMVF.txt  event5_IVF.txt  event5_pythia8_cov.txt  event6_AMVF.txt  event6_IVF.txt  event6_pythia8_cov.txt  event7_AMVF.txt  event7_IVF.txt  event7_pythia8_cov.txt  event8_AMVF.txt  event8_IVF.txt  event8_pythia8_cov.txt  event9_AMVF.txt  event9_IVF.txt  event9_pythia8_cov.txt
Testing/ntuple_check/: event0_AMVF.txt  event0_IVF.txt  event0_truth.txt  event100_AMVF.txt  event100_IVF.txt  event100_truth.txt  event101_AMVF.txt  event101_IVF.txt  event101_truth.txt  event102_AMVF.txt  event102_IVF.txt  event102_truth.txt  event103_AMVF.txt  (+379 more)
ttlindkvistACTS/: CMakeLists.txt
ttlindkvistACTS/include/ttlindkvistACTS/: AMVFvsIVFPrinter.hpp  CustomVertexSeeder.hpp  CustomVertexSeeder.ipp  ModifiedAMVFAlgorithm.hpp  ModifiedIterativeVertexFinderAlgorithm.hpp  NTupleAMVFAlgo.hpp  NTupleIterativeVertexFinderAlgorithm.hpp  NTuplePrinting.hpp  NTupleReaderOptions.hpp  RootNTupleReader.hpp  VertexingResolutionAlgorithm.hpp  goodRecoVtxTracks.hpp
ttlindkvistACTS/src/: AMVFvsIVFPrinter.cpp  ModifiedAMVFAlgorithm.cpp  ModifiedIterativeVertexFinderAlgorithm.cpp  NTupleAMVFAlgo.cpp  NTupleIterativeVertexFinderAlgorithm.cpp  NTuplePrinting.cpp  NTupleReaderOptions.cpp  RootNTupleReader.cpp  VertexingResolutionAlgorithm.cpp
(+7264 files in other folders)
